  * Fix a bug on cassandra timestamp when indexing or deleting documents.

2.1.1-5 - 2016-03-15
  * Add missing classes from org.elasticsearch.common.logging.
  * Add index setting number_of_replica in cluster state.
  * Change elastic_admin keyspace replication strategy to 'DatacenterReplicationStrategy' (RF=Datacenter number of nodes to improve resilancy).
  * Manage token_range in SearchRequest has an optional field to remain compatible with the Elasticsearch binary protocol.
  * Set Elasticsearch version to 2.1.1 to remain compatible with some plugins.
  
2.1.1-6 - 2016-03-20
  * Fix an indexing bug (regression from 2.1.1-5)
  * Disable cassandra timestamp update when Elasticsearch _timestamp is disabled (improve insert performance, regression from 2.1.1-4)
  * Fix a bug on flush and refresh operations causing a performance issue with kibana.
  
2.1.1-7 - 2016-04-02
  * Fix a ClassCastException when indexing a document with single partition key other than a string.
  * Add support for mapping update of nested object (update cassandra UDT).
  
2.1.1-8 - 2016-04-18
  * Add mapping attributes cql_partition_key:boolean and cql_primary_key_order:integer to build cassandra table with composite primary key.
  * Add support for static column with the mapping attribute cql_static_column:boolean. This give the ability to index static columns in Elasticsearch.
  * Fix various mapping issues.

2.1.1-9 - 2016-05-10
  * Upgrade to cassandra 2.2.5
  * Change the default elasticsearch data directory to ${cassandra_storagedir}/data/elasticsearch.data.
  * Provides various cassandra secondary index implementations with better performances by removing json generation and parsing.
  * Improve cluster metadata management (fix a bug when deleting an index).
  * Fix a mapping bug when indexing a cassandra map as a nested document.
  * Mapping of cassandra text columns are now index with index=not_analyzed by default.
  * Improve support for geo_point.
  